# uv_sample

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/uv_sample/: __init__.py  sample.py
