[project]
name = "uv-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ruri1212", email = "rikuinoue1007@icloud.com" }
]
requires-python = ">=3.12.9"
dependencies = [
    "mypy>=1.15.0",
    "numpy>=2.2.5",
    "pre-commit>=4.2.0",
    "ruff>=0.11.7",
]

[project.scripts]
uv-sample = "uv_sample:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
