[project]
name = "uv-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ruri1212", email = "rikuinoue1007@icloud.com" }
]
requires-python = ">=3.12.9"
dependencies = [
    "mypy>=1.15.0",
    "numpy>=2.2.5",
    "pre-commit>=4.2.0",
    "rich>=14.0.0",
    "ruff>=0.11.7",
]

[project.scripts]
uv-sample = "uv_sample:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6
